--- a/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/style.scss
+++ b/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/style.scss
@@ -201,6 +201,26 @@ body{
                 float: right;
             }
         }
+        .menu2{
+            position: relative;
+            select{
+                background-color: #e4e3e5;
+                list-style-type: none;
+                border-style: none;
+                width: 236px;
+                height: 26px;
+                border: 1px solid red;
+                position: absolute;
+                top: 36px;
+                left: 0;
+                .option{
+                    :nth-child(1){
+                        background-color: #bc504b;
+                        height: 26px;
+                    }
+                }
+            }
+        }
         .search{
             margin-right: 0;
             background-color: #bd504a;
@@ -368,14 +388,173 @@ body{
 .section8{
     height: 750px;
     background-color: #fff;
+    h3{
+        margin: 110px auto 0;
+        font-size: 21px;
+        color: #323333;
+        line-height: 36px;
+        text-align: center;
+    }
+    .line{
+        background-color: $color_theme;
+        height: 3px;
+        width: 31px;
+        margin: 0 auto 10px;
+    }
+    .title{
+        font-size: 12px;
+        color: #aaaaaa;
+        text-align: center;
+    }
+    .input{
+        margin: 100px auto 0;
+        width: 1004px;
+        height: 282px;
+        .left{
+            float: left;
+            width: 290px;
+            height: 100%;
+            color: #231815;
+            .sentence1{
+                margin-bottom: 32px;
+                h4{
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+                p{
+                    font-size: 12px;
+                    margin-top: 25px;
+                }
+                a{
+                    display: block;
+                    margin: 5px 0 0 240px;
+                    font-size: 12px;
+                    text-indent: 20px;
+                    background: url(images/arrow_down.png) 1px 5px no-repeat;
+                }
+            }
+            .sentence2{
+                @extend .sentence1;
+                margin-bottom: 17px;
+            }
+            .sentence3{
+                @extend .sentence1;
+                margin-bottom: 0px;
+            }
+        }
+
+        .right{
+            width: 640px;
+            height: 100%;
+            float: right;
+            input{
+                width: 310px;
+                height: 40px;
+                background-color: #ededed;
+                text-indent: 15px;
+                margin-bottom: 12px;
+                margin-right: 20px;
+                border: none;
+            }
+            textarea{
+                background-color: #ededed;
+                border: none;
+                width: 100%;
+                height: 120px;
+                text-indent: 18px;
+                margin-bottom: 11px;
+            }
+            .ri{
+                margin-right: 0px;
+            }
+            .submit{
+                width: 640px;
+                font-size: 14px;
+                color: #323333;
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .section9{
     height: 357px;
     background-color: #32363e;
+    text-align: center;
+    h4{
+        margin-top: 90px;
+        font-size:21px;
+        color: #fff;
+    }
+    p{
+        color: #fff;
+        margin-top: 5px;
+        font-size:12px;
+    }
+    .input{
+        width: 510px;
+        height: 40px;
+        margin: 25px auto 0;
+        input{
+            width: 430px;
+            height: 100%;
+            line-height: 14px;
+            text-indent: 10px;
+            background-color: #fff;
+            float: left;
+            border: none;
+        }
+        a{
+            float: right;
+            width: 80px;
+            height: 100%;
+            background-color: #6f7278;
+            color: #fff;
+            font-size: 15px;
+            text-align: center;
+            line-height: 40px;
+        }
+    }
+    .logo_link_bar{
+        width: 200px;
+        height: 30px;
+        margin: 35px auto 0;
+        .logo_link{
+            float: left;
+            width: 50px;
+            height: 100%;
+            background: url(images/icons.png) 13px -398px no-repeat;
+        }
+        :nth-child(2){
+            background: url(images/icons.png) 13px -498px no-repeat;
+        }
+        :nth-child(3){
+            background: url(images/icons.png) 13px -598px no-repeat;
+        }
+        :nth-child(4){
+            background: url(images/icons.png) 13px -698px no-repeat;
+        }
+    }
 }
 
 .footer{
     height: 58px;
     background-color: #2f3038;
+    .center{
+        position: relative;
+    }
+    span{
+        position: absolute;
+        left: 98px;
+        top: 30px;
+        font-size: 12px;
+        color: #fff;
+    }
+    a{
+        position: absolute;
+        right: 40px;
+        top: 35px;
+        font-size: 12px;
+        color: #fff;
+    }
 }
