--- a/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/style.scss
+++ b/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/style.scss
@@ -47,7 +47,7 @@ body{
         font-size: $font_medium;
         line-height: $nav_height  - 5px;
         .login_btn{
-            background: url(images/icon_user.png) 0 18px no-repeat;
+            background: url(http://img.geekerhua.com/ife/1.7/icon_user.png) 0 18px no-repeat;
             text-indent: 23px;
             color: $color_theme;
             margin-right: 57px;
@@ -71,7 +71,7 @@ body{
 
 .section1{
     height: 690px;
-    background: url("images/section1.jpg")  no-repeat;
+    background: url("http://img.geekerhua.com/ife/1.7/section1.jpg")  no-repeat;
     color:#fff;
     width: $center_width;
     margin: 0 auto;
@@ -119,19 +119,19 @@ body{
         background-color: #989899;
     }
     .img{
-        background: url(images/icons.png) no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/icons.png) no-repeat;
         height: 42px;
         width: 42px;
         margin: 43px 0 45px 144px;
     }
     .icon2{
-        background: url(images/icons.png) 0 -100px no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/icons.png) 0 -100px no-repeat;
     }
     .icon3{
-        background: url(images/icons.png) 0 -200px no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/icons.png) 0 -200px no-repeat;
     }
     .icon4{
-        background: url(images/icons.png) 0 -300px no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/icons.png) 0 -300px no-repeat;
     }
 }
 
@@ -162,7 +162,7 @@ body{
     height: 340px;
     width: $center_width;
     margin: 0 auto;
-    background: url(images/section4.jpg) no-repeat;
+    background: url(http://img.geekerhua.com/ife/1.7/section4.jpg) no-repeat;
     color: #fff;
     
     font-family: "MicrosoftYaHei";
@@ -199,17 +199,26 @@ body{
             }
             a{
                 float: right;
+                width: 18px;
+                height: 18px;
+                margin-right: 8px;
+                margin-top: 8px;
+                background: #bd504b url(http://img.geekerhua.com/ife/1.7/arrow_down.png) 4px 7px no-repeat; 
             }
         }
         .menu2{
             position: relative;
+            border: 2px solid #bd504b;
+            width: 232px;
+            height: 34px;
+            margin-top: -1px;
             select{
                 background-color: #e4e3e5;
                 list-style-type: none;
                 border-style: none;
-                width: 236px;
+                width: 235px;
                 height: 26px;
-                border: 1px solid red;
+                border: 2px solid #bd504b;
                 position: absolute;
                 top: 36px;
                 left: 0;
@@ -287,7 +296,7 @@ body{
         height: 100%;
         background-color: green;
         float: left;
-        background: url(images/section6.jpg) no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/section6.jpg) no-repeat;
         text-align: center;
         color: #fff;
         .t1{
@@ -381,7 +390,7 @@ body{
         width: $center_width - 850px;
         float: right;
         height: 100%;
-        background: url(images/section7.jpg) no-repeat;
+        background: url(http://img.geekerhua.com/ife/1.7/section7.jpg) no-repeat;
     }
 }
 
@@ -430,7 +439,7 @@ body{
                     margin: 5px 0 0 240px;
                     font-size: 12px;
                     text-indent: 20px;
-                    background: url(images/arrow_down.png) 1px 5px no-repeat;
+                    background: url(http://img.geekerhua.com/ife/1.7/arrow_down.png) 1px 5px no-repeat;
                 }
             }
             .sentence2{
@@ -523,16 +532,16 @@ body{
             float: left;
             width: 50px;
             height: 100%;
-            background: url(images/icons.png) 13px -398px no-repeat;
+            background: url(http://img.geekerhua.com/ife/1.7/icons.png) 13px -398px no-repeat;
         }
         :nth-child(2){
-            background: url(images/icons.png) 13px -498px no-repeat;
+            background: url(http://img.geekerhua.com/ife/1.7/icons.png) 13px -498px no-repeat;
         }
         :nth-child(3){
-            background: url(images/icons.png) 13px -598px no-repeat;
+            background: url(http://img.geekerhua.com/ife/1.7/icons.png) 13px -598px no-repeat;
         }
         :nth-child(4){
-            background: url(images/icons.png) 13px -698px no-repeat;
+            background: url(http://img.geekerhua.com/ife/1.7/icons.png) 13px -698px no-repeat;
         }
     }
 }
