--- a/ife-task1.11移动端页面/index.pug
+++ b/ife-task1.11移动端页面/index.pug
@@ -19,33 +19,33 @@ html(lang='en')
             .center_con(class="clearfix")
                 .banner
                     a 
-                        img(src="./images/adv01.jpg", alt="banner")
+                        img(src="http://img.geekerhua.com/ife/1.11/adv01.jpg", alt="banner")
                 .menu(class="clearfix")
                     ul
                         each title in ["西瓜","土豆","草莓","番茄","红枣"]
                             li
                                 a(href="")
-                                    img(src="./images/icon07.png", alt="icon")
+                                    img(src="http://img.geekerhua.com/ife/1.11/icon01.png", alt="icon")
                                     h3= title
                 .classify(class="clearfix")
                     ul
                         each title in ["西瓜","土豆","草莓"]
                             li
                                 a(href="")
-                                    img(src="./images/icon07.png", alt="icon")
+                                    img(src="http://img.geekerhua.com/ife/1.11/icon01.png", alt="icon")
                                     h3 分栏一
                                     h4 分栏小标题
                 .section(class="clearfix")
                     h2 模块一
                     .part
-                        img(src="./images/logo.png", alt="icon")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="icon")
                         ul
                             each title in ["1","2","3","4"]
                                 li
                                     a(href="")
                                         h3= title + "这是文章"
                     .part
-                        img(src="./images/logo.png", alt="icon")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="icon")
                         ul
                             each title in ["西瓜","土豆","草莓",""]
                                 li
@@ -54,14 +54,14 @@ html(lang='en')
                 .section(class="clearfix")
                     h2 模块二
                     .part
-                        img(src="./images/logo.png", alt="icon")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="icon")
                         ul
                             each title in ["西瓜","土豆","草莓",""]
                                 li
                                     a(href="")
                                         h3 这是文章
                     .part
-                        img(src="./images/logo.png", alt="icon")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="icon")
                         ul
                             each title in ["西瓜","土豆","草莓",""]
                                 li
@@ -69,19 +69,19 @@ html(lang='en')
                                         h3 这是文章
                 article(class="clearfix")
                     .article_part(class="clearfix")
-                        img(src="./images/logo.png", alt="logo")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="logo")
                         h3 这是文章标题字号是22的文章标题
                         p 文章来源 6分钟前
                     .article_part(class="clearfix")
-                        img(src="./images/logo.png", alt="logo")
+                        img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="logo")
                         h3 这是文章标题字号是22的文章标题
                         p 文章来源 6分钟前
                 .more
                     h3 这也是文章标题字号是22的文章标题
                     .box
                         a(href="")
-                            img(src="./images/logo.png", alt="")
+                            img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="")
                         a(href="")
-                            img(src="./images/logo.png", alt="")
+                            img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="")
                         a(href="")
-                            img(src="./images/logo.png", alt="")
+                            img(src="http://img.geekerhua.com/ife/1.11/logo.png", alt="")
